--- a/.github/workflows/pr_stats.yml
+++ b/.github/workflows/pr_stats.yml
@@ -11,7 +11,7 @@ jobs:
         uses: flowwer-dev/pull-request-stats@master
         with:
           token: ${{ secrets.GITHUB_TOKEN }}
-          organization: 'piedpiper'
+          organization: 'awsdocs'
           period: 7
           charts: true
           disableLinks: true
