--- a/.doc_gen/metadata/sesv2_metadata.yaml
+++ b/.doc_gen/metadata/sesv2_metadata.yaml
@@ -134,9 +134,9 @@ sesv2_ListContacts:
   services:
     sesv2: {ListContacts}
 sesv2_SendEmail_Simple:
-  title: Send a simple &SESv2; email using an &AWS; SDK
-  title_abbrev: Send a simple email
-  synopsis: send a simple &SESv2; email.
+  title: Send an &SESv2; email using an &AWS; SDK
+  title_abbrev: Send an email
+  synopsis: send an &SESv2; email.
   category:
   languages:
     Java:
@@ -147,6 +147,9 @@ sesv2_SendEmail_Simple:
             - description: Sends a message.
               snippet_tags:
                 - ses.java2.sendmessage.sesv2.main
+            - description: Sends a message using a template.
+              snippet_tags:
+                - sesv2.java2.newsletter.SendEmail.template
     Rust:
       versions:
         - sdk_version: 1
@@ -155,6 +158,9 @@ sesv2_SendEmail_Simple:
             - description: Sends a message to all members of the contact list.
               snippet_tags:
                 - ses.rust.send-email
+            - description: Sends a message to all members of the contact list using a template.
+              snippet_tags:
+                - sesv2.rust.send-email.template
     Ruby:
       versions:
         - sdk_version: 3
@@ -169,41 +175,12 @@ sesv2_SendEmail_Simple:
         - sdk_version: 3
           github: python/example_code/sesv2
           excerpts:
-            - description:
+            - description: Sends a message to all members of the contact list.
               snippet_tags:
                 - python.example_code.sesv2.SESv2Workflow.main
                 - python.example_code.sesv2.SESv2Workflow.decl
                 - python.example_code.sesv2.SendEmail.simple
-  services:
-    sesv2: {SendEmail}
-sesv2_SendEmail_Template:
-  title: Send a templated &SESv2; email using an &AWS; SDK
-  title_abbrev: Send a templated email
-  synopsis: send a templated &SESv2; email.
-  category:
-  languages:
-    Java:
-      versions:
-        - sdk_version: 2
-          github: javav2/example_code/ses
-          excerpts:
-            - description: Sends a message.
-              snippet_tags:
-                - sesv2.java2.newsletter.SendEmail.template
-    Rust:
-      versions:
-        - sdk_version: 1
-          github: rustv1/examples/ses
-          excerpts:
-            - description: Sends a message to all members of the contact list.
-              snippet_tags:
-                - sesv2.rust.send-email.template
-    Python:
-      versions:
-        - sdk_version: 3
-          github: python/example_code/sesv2
-          excerpts:
-            - description:
+            - description: Sends a message to all members of the contact list using a template.
               snippet_tags:
                 - python.example_code.sesv2.SESv2Workflow.main
                 - python.example_code.sesv2.SESv2Workflow.decl
