JavaScript (v3): Fix formatting and linting errors.

--- a/javascriptv3/example_code/medical-imaging/scenarios/health-image-sets/pixel-data-verification/package.json
+++ b/javascriptv3/example_code/medical-imaging/scenarios/health-image-sets/pixel-data-verification/package.json
@@ -1,5 +1,5 @@
 {
-    "name": "pixel-data-verification",
+    "name": "@aws-doc-sdk-examples/pixel-data-verification",
     "version": "1.0.0",
     "description": "",
     "main": "index.js",
