--- a/.doc_gen/metadata/medical-imaging_metadata.yaml
+++ b/.doc_gen/metadata/medical-imaging_metadata.yaml
@@ -1169,6 +1169,22 @@ medical-imaging_Scenario_ImageSetsAndFrames:
               snippet_tags:
                 - cpp.example_code.medical-imaging.image-sets-workflow.clean_up
                 - cpp.example_code.medical-imaging.image-sets-workflow.empty_data_store
+    JavaScript:
+      versions:
+        - sdk_version: 3
+          github: javascriptv3/example_code/medical-imaging
+          github_note_at_bottom: true
+          excerpts:
+            - description:
+              snippet_files:
+                - javascriptv3/example_code/medical-imaging/scenarios/health-image-sets/index.js
+                - javascriptv3/example_code/medical-imaging/scenarios/health-image-sets/step-1.js
+                - javascriptv3/example_code/medical-imaging/scenarios/health-image-sets/step-2.js
+                - javascriptv3/example_code/medical-imaging/scenarios/health-image-sets/step-3.js
+                - javascriptv3/example_code/medical-imaging/scenarios/health-image-sets/step-4.js
+                - javascriptv3/example_code/medical-imaging/scenarios/health-image-sets/step-5.js
+                - javascriptv3/example_code/medical-imaging/scenarios/health-image-sets/step-6.js
+                - javascriptv3/example_code/medical-imaging/scenarios/health-image-sets/step-7.js
   services:
     medical-imaging:
       {
